# web-native-common-samples

./: .gitignore  CMakeLists.txt  README.md
01-hello-world/: CMakeLists.txt  README.md
01-hello-world/hello_world/: CMakeLists.txt
01-hello-world/hello_world/include/hello_world/: hello_world.hpp
01-hello-world/hello_world/src/: hello_world.cpp
01-hello-world/html/: index_debug.html  index_release.html
01-hello-world/logger/: CMakeLists.txt
01-hello-world/platform/: CMakeLists.txt
01-hello-world/platform/native/: CMakeLists.txt  main.cpp
01-hello-world/platform/web/: CMakeLists.txt  entry_point.cpp  entry_point.hpp  post.js
02-hashing/: CMakeLists.txt  README.md
02-hashing/benchmark/: CMakeLists.txt
02-hashing/benchmark/include/benchmark/: benchmark.hpp
02-hashing/benchmark/src/: benchmark.cpp
02-hashing/hashing/: CMakeLists.txt
02-hashing/hashing/include/hashing/: benchmark.hpp
02-hashing/hashing/src/: hasher.cpp  murmurhash3.cpp  murmurhash3.hpp
02-hashing/html/: hash-benchmark.js  index_debug.html  index_js.html  index_release.html
02-hashing/logger/include/logger/: logger.hpp
02-hashing/platform/native/: CMakeLists.txt  main.cpp
02-hashing/platform/web/: CMakeLists.txt  entry_point.cpp  entry_point.hpp  post.js
cmake/: emscripten.cmake  library.cmake
